# pipkeymon

./: .gitignore  LICENSE  README.rst  pyproject.toml
docs/: conf.py  configuration.rst  index.rst  limitations.rst  overview.rst  usage.rst
src/pipkeymon/: __init__.py  __main__.py  cli.py  config.py  input_reader.py  key_sender.py  main.py
